--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 <body>
 
   <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+  <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="it's a picture of a yawning lion"
+  />
+  <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="so sleepy yet so fierce - yawning lion"
+    title="Use this ONE weird trick to put any cat to sleep - lions hate this!"
+  />
+
 
 </body>
 </html>
